test2-2023-01-14.log
regress/test2.fir:247424:17: error: use of unknown declaration 'validif'
    tmp20070 <= validif(head(UInt<3>(6), 1), SInt<24>("b-11111101000010001010101"))
                ^
===-------------------------------------------------------------------------===
                         ... Execution time report ...
===-------------------------------------------------------------------------===
  Total Execution Time: 0.9415 seconds

  ----Wall Time----  ----Name----
    0.9400 ( 99.9%)  FIR Parser
    0.0000 (  0.0%)    Parse annotations
    0.0000 (  0.0%)    Parse OMIR
    0.8796 ( 93.4%)    Parse modules
    0.0014 (  0.1%)  Rest
    0.9415 (100.0%)  Total

{
  totalTime: 0.952,
  maxMemory: 151269376
}
